fixed mobile screen navbar links are aligned to the left

--- a/frontend/src/css/components/navbar.css
+++ b/frontend/src/css/components/navbar.css
@@ -95,6 +95,7 @@
   }
 
   .nav-elements ul {
+    align-items: start;
     flex-direction: column;
   }
 
